# tap-stark

./: .gitignore  Cargo.toml  LICENSE  LICENSE.txt  README.md  readme.md
.github/workflows/: rust.yml
basic/: Cargo.toml
basic/src/: bf_pcs.rs  lib.rs
basic/src/challenger/: chan_field.rs  mod.rs
basic/src/field/: mod.rs
basic/src/mmcs/: bf_mmcs.rs  error.rs  mod.rs  point.rs  tapleaf.rs  taptree.rs  taptree_mmcs.rs
basic/src/tcs/: builder.rs  complete_taptree.rs  error.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs
fri/: Cargo.toml
fri/benches/: fold_even_odd.rs
fri/src/: config.rs  error.rs  fold_even_odd.rs  lib copy.rs  lib.rs  proof.rs  prover.rs  script_verifier.rs  two_adic_pcs.rs  verifier.rs
fri/src/fri_script/: fiat_shamir_subtree.rs  leaf.rs  mod.rs  point.rs  verify_folding.rs
fri/src/fri_scripts/: fiat_shamir_subtree.rs  leaf.rs  mod.rs  pcs.rs  point.rs  verify_folding.rs
fri/src/mmcs/: bf_mmcs.rs  mod.rs  tapleaf.rs  taptree.rs  taptree_mmcs.rs
fri/tests/: fri.rs  pcs.rs
primitives/: Cargo.toml
primitives/src/: air.rs  bf_pcs.rs  lib.rs
primitives/src/bit_comm/: bc_assign.rs  bit_comm.rs  mod.rs
primitives/src/challenger/: chan_field.rs  mod.rs
primitives/src/common/: mod.rs
primitives/src/field/: mod.rs
primitives/src/mmcs/: bf_mmcs.rs  error.rs  mod.rs  point.rs  tapleaf.rs  taptree.rs  taptree_mmcs.rs
script_expr/: Cargo.toml
script_expr/src/: alias.rs  challenger_expr.rs  field_script_expr.rs  fraction_expr.rs  input_manager.rs  lagrange.rs  lib.rs  num_script_expr.rs  opcode.rs  script_builder.rs  script_gen.rs  script_helper.rs  std_expr.rs  value_manager.rs  variable.rs
script_manager/: Cargo.toml  README.md
script_manager/src/: bc_assignment.rs  lib.rs  planner.rs  script_info.rs
scripts/: Cargo.toml
scripts/src/: lib.rs  pseudo.rs
scripts/src/bit_comm/: bit_comm.rs  bit_comm_u32.rs  mod.rs  secret_generator.rs  winternitz.rs
scripts/src/hashes/: blake3.rs
scripts/src/u31/: babybear.rs  mod.rs
scripts/src/u31_ext/: babybear.rs  mod.rs
scripts/src/u32/: u32_rrot.rs  u32_std.rs
segment/: Cargo.toml
segment/src/: lib.rs
uni-stark/: Cargo.toml
uni-stark/src/: config.rs  expr_helper.rs  lib.rs  proof.rs  prover.rs  script_verifier.rs  scripts_expression.rs  symbolic_builder.rs  symbolic_expression.rs  symbolic_prover.rs  symbolic_variable.rs  symbolic_verifier.rs  verifier.rs  zerofier_coset.rs
uni-stark/src/convert/: mod.rs
uni-stark/src/expr/: field_script_expr.rs  mod.rs  num_script_expr.rs  script_builder.rs  script_helper.rs  variable.rs
uni-stark/src/scripts/: bf_unistark.rs  mod.rs  utils.rs
uni-stark/tests/: fib_air.rs  mul_air.rs
