[workspace]
members = [
    "fri",
    "primitives",
    "p3",
    "scripts",
    "script_manager",
    "segment",
    "common",
    "uni-stark"
, "script_expr"]

[patch.crates-io.base58check]
git = "https://github.com/bitlayer-org/rust-bitcoin"
branch = "bitvm"

[patch.crates-io.bitcoin]
git = "https://github.com/bitlayer-org/rust-bitcoin"
branch = "bitvm"

[patch.crates-io.bitcoin_hashes]
git = "https://github.com/bitlayer-org/rust-bitcoin"
branch = "bitvm"

[patch.crates-io.bitcoin-internals]
git = "https://github.com/bitlayer-org/rust-bitcoin"
branch = "bitvm"

[patch.crates-io.bitcoin-io]
git = "https://github.com/bitlayer-org/rust-bitcoin"
branch = "bitvm"

[patch.crates-io.bitcoin-units]
git = "https://github.com/bitlayer-org/rust-bitcoin"
branch = "bitvm"
