[package]
name = "fri"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bitcoin-script = { git = "https://github.com/cyl19970726/rust-bitcoin-script", rev = "eda97c5" }
bitcoin = { git = "https://github.com/cyl19970726/rust-bitcoin", rev = "ffad6f3" }
bitcoin-scriptexec = { git = "https://github.com/cyl19970726/rust-bitcoin-scriptexec",rev = "09c601e" }


p3-challenger =  { git = "https://github.com/Plonky3/Plonky3.git" }
p3-dft =  { git = "https://github.com/Plonky3/Plonky3.git" }
p3-field =  { git = "https://github.com/Plonky3/Plonky3.git" }
p3-interpolation =  { git = "https://github.com/Plonky3/Plonky3.git" }
p3-matrix =  { git = "https://github.com/Plonky3/Plonky3.git" }
p3-maybe-rayon =  { git = "https://github.com/Plonky3/Plonky3.git" }
p3-util = { git = "https://github.com/Plonky3/Plonky3.git" }
itertools = "0.12.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

rand = "0.8.5"



scripts = { path = "../scripts"}
primitives = {path = "../primitives"}
p3-baby-bear =  { git = "https://github.com/Plonky3/Plonky3.git" }
p3-symmetric =  { git = "https://github.com/Plonky3/Plonky3.git" }
[dev-dependencies]
p3-baby-bear =  { git = "https://github.com/Plonky3/Plonky3.git" }
p3-dft =  { git = "https://github.com/Plonky3/Plonky3.git" }
p3-goldilocks =  { git = "https://github.com/Plonky3/Plonky3.git" }
p3-mersenne-31 =  { git = "https://github.com/Plonky3/Plonky3.git" }
p3-mds =  { git = "https://github.com/Plonky3/Plonky3.git" }
p3-merkle-tree =  { git = "https://github.com/Plonky3/Plonky3.git" }
p3-blake3 =  { git = "https://github.com/Plonky3/Plonky3.git" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-interpolation =  { git = "https://github.com/Plonky3/Plonky3.git" }
criterion = "0.5.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
blake3 = "1.5"
[[bench]]
name = "fold_even_odd"
harness = false
