[package]
name = "primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin-script = { git = "https://github.com/bitlayer-org/rust-bitcoin-script" }
bitcoin = { git = "https://github.com/bitlayer-org/rust-bitcoin", branch = "bitvm", features = ["serde"] }
bitcoin-scriptexec = { git = "https://github.com/bitlayer-org/rust-bitcoin-scriptexec", branch = "bitvm"}
lazy_static = "1.4.0"
itertools = "0.12.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
blake3 = "1.5"
rand = "0.8.5"
rand_chacha = "0.3.1"


p3-symmetric ={ git = "https://github.com/Plonky3/Plonky3.git" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-baby-bear =  { git = "https://github.com/Plonky3/Plonky3.git" }
p3-challenger =  { git = "https://github.com/Plonky3/Plonky3.git" }
p3-util = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-maybe-rayon ={ git = "https://github.com/Plonky3/Plonky3.git" }
p3-matrix =  { git = "https://github.com/Plonky3/Plonky3.git" }
p3-commit =  { git = "https://github.com/Plonky3/Plonky3.git" }

segment ={ path = "../segment" }
common = { path = "../common"}
scripts = {path = "../scripts"}
script_manager = {path = "../script_manager"}

[dev-dependencies]
p3-interpolation = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-dft =  { git = "https://github.com/Plonky3/Plonky3.git" }
p3-maybe-rayon ={ git = "https://github.com/Plonky3/Plonky3.git" }