[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin-script = { git = "https://github.com/bitlayer-org/rust-bitcoin-script" }
bitcoin = { git = "https://github.com/bitlayer-org/rust-bitcoin", branch = "bf-stark" }
bitcoin-scriptexec = { git = "https://github.com/bitlayer-org/rust-bitcoin-scriptexec" }
rust-bitcoin-u31-or-u30 ={ git = "https://github.com/bitlayer-org/rust-bitcoin-m31-or-babybear.git", branch = "bf-pcs" }
lazy_static = "1.4.0"

rand_chacha = "0.3.1"
rand = "0.8.5"
p3-field = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-baby-bear =  { git = "https://github.com/Plonky3/Plonky3.git" }
p3-challenger =  { git = "https://github.com/Plonky3/Plonky3.git" }
p3-util = { git = "https://github.com/Plonky3/Plonky3.git" }
once_cell = "1.8.0"
hex = "0.4.3"
itertools = "0.12.1"

common = {path = "../common"}

[dev-dependencies]
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-mersenne-31 =  { git = "https://github.com/Plonky3/Plonky3.git" }
p3-mds = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-symmetric =  { git = "https://github.com/Plonky3/Plonky3.git" }
criterion = "0.5.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
blake3 = "1.5"
primitives = {path = "../primitives"}

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
