[package]
name = "segment"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin-script = { git = "https://github.com/bitlayer-org/rust-bitcoin-script" }
bitcoin = { git = "https://github.com/bitlayer-org/rust-bitcoin", branch = "bf-stark" }
bitcoin-scriptexec = { git = "https://github.com/bitlayer-org/rust-bitcoin-scriptexec" }
scripts ={ path = "../scripts"}