[package]
name = "uni-stark"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bitcoin-script-stack = {git = "https://github.com/bitlayer-org/rust-bitcoin-script-stack.git", branch = "bitvm"}
bitcoin-script = { git = "https://github.com/bitlayer-org/rust-bitcoin-script" }
bitcoin = { git = "https://github.com/bitlayer-org/rust-bitcoin", branch = "bitvm" }
bitcoin-scriptexec = { git = "https://github.com/bitlayer-org/rust-bitcoin-scriptexec", branch = "bitvm"}
p3-air = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-commit ={ git = "https://github.com/Plonky3/Plonky3.git" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-util = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git" }
itertools = "0.13.0"
tracing = "0.1.37"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
scripts = { path = "../scripts"}
primitives = {path = "../primitives"}
segment ={ path = "../segment"}
script_manager = {path = "../script_manager"}
fri = { path = "../fri"}
common = {path = "../common"}
script_expr = {path = "../script_expr"}
risc0-zkp = { git = "https://github.com/cyl19970726/risc0.git" , branch = "constraint_convert"}
risc0-core = { git = "https://github.com/cyl19970726/risc0.git" , branch = "constraint_convert"}

[dev-dependencies]
risc0-zkvm = { git = "https://github.com/cyl19970726/risc0.git" , branch = "constraint_convert"}
p3-circle = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-mds = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-mersenne-31 = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git" }
rand = "0.8.5"
rand_chacha = "0.3.1"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
postcard = { version = "1.0.0", default-features = false, features = ["alloc"] }
